--- a/docs/package.json
+++ b/docs/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vitepress dev",
-    "build": "vitepress build",
+    "generate-examples": "tsx .vitepress/hooks/generate-examples.ts",
+    "dev": "npm run generate-examples && vitepress dev",
+    "build": "npm run generate-examples && vitepress build",
     "preview": "vitepress preview"
   },
   "devDependencies": {
+    "tsx": "^4.19.0",
     "vitepress": "^1.5.0",
     "vue": "^3.5.13"
   }
