--- a/gallery/package.json
+++ b/gallery/package.json
@@ -13,6 +13,7 @@
     "@auroraview/sdk": "file:../packages/auroraview-sdk",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gsap": "^3.14.2",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.561.0",
     "react": "^19.2.1",
