--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -26,10 +26,18 @@ asyncio_default_fixture_loop_scope = function
 markers =
     ui: UI tests that require a display
     slow: Slow running tests
+    smoke: Small smoke tests
+    flaky: Flaky tests with retries
+    serial: Tests that must run serially
     maya: Tests that require Maya
     qt: Tests that require Qt dependencies (qtpy and Qt bindings)
     headless: Tests that can run without display
+    playwright: Tests that use Playwright
+    xvfb: Tests that use Xvfb virtual display (Linux only)
+    webview2_cdp: Tests that connect to WebView2 via CDP (Windows only)
+    edge_webdriver: Tests that use Edge WebDriver (Selenium)
     integration: Integration tests
     unit: Unit tests
     asyncio: Async tests
+
 
