--- a/vx.toml
+++ b/vx.toml
@@ -6,9 +6,10 @@
 
 [tools]
 just = "latest"
-python = "3.7"
-rust = "latest"
+python = "3.11"
+rust = "1.90.0"
 uv = "latest"
+node = "20"
 
 [settings]
 # Automatically install missing tools when entering dev environment
@@ -17,110 +18,74 @@ auto_install = true
 cache_duration = "7d"
 
 [scripts]
-audit = "just audit"
-auroraview = "python -m auroraview.__main__"
-bench = "cargo bench"
-bench-compare = "just bench-compare"
-bench-save = "just bench-save"
-build = "cargo build"
+# All scripts delegate to just commands for consistency
+# Usage: vx <script-name> or vx just <command>
+
+# Core development
+build = "just build"
+build-release = "just build-release"
 build-all = "just build-all"
 build-cli = "just build-cli"
-build-release = "cargo build --release"
 build-wheel = "just build-wheel"
-check = "cargo check"
-check-all = "just check-all"
-ci-build = "just ci-build"
-ci-install = "just ci-install"
-ci-lint = "just ci-lint"
-ci-test-basic = "just ci-test-basic"
-ci-test-python = "just ci-test-python"
-ci-test-rust = "just ci-test-rust"
+rebuild-pylib = "just rebuild-pylib"
+install = "just install"
+dev = "just dev"
 clean = "just clean"
-coverage-all = "just coverage-all"
-coverage-cli = "just coverage-cli"
-coverage-core = "just coverage-core"
-coverage-crate = "just coverage-crate"
-coverage-pack = "just coverage-pack"
+
+# Testing
+test = "just test"
+test-unit = "just test-unit"
+test-integration = "just test-integration"
+test-fast = "just test-fast"
+test-cov = "just test-cov"
+test-pack = "just test-pack"
+
+# Linting & Formatting
+lint = "just lint"
+format = "just format"
+fix = "just fix"
+check = "just check"
+check-all = "just check-all"
+
+# Coverage
 coverage-python = "just coverage-python"
 coverage-rust = "just coverage-rust"
-coverage-rust-lcov = "just coverage-rust-lcov"
-default = "just default"
-dev = "just dev"
-doc = "cargo doc"
-docs = "just docs"
-docs-build = "just docs-build"
-docs-clean = "just docs-clean"
-docs-dev = "just docs-dev"
-docs-generate-examples = "just docs-generate-examples"
-docs-install = "just docs-install"
-docs-preview = "just docs-preview"
-docs-screenshots = "just docs-screenshots"
-docs-serve = "just docs-serve"
-example = "just example"
-example-list = "just example-list"
-example-screenshot = "just example-screenshot"
-example-screenshots = "just example-screenshots"
-fix = "just fix"
-format = "cargo fmt"
-gallery = "just gallery"
-gallery-build = "just gallery-build"
-gallery-cdp = "just gallery-cdp"
-gallery-cdp-only = "just gallery-cdp-only"
-gallery-dev = "just gallery-dev"
-gallery-pack = "just gallery-pack"
-gallery-pack-project = "just gallery-pack-project"
-gallery-screenshots = "just gallery-screenshots"
-gallery-test = "just gallery-test"
-gallery-test-loop = "just gallery-test-loop"
-gallery-test-playwright = "just gallery-test-playwright"
-gallery-test-real = "just gallery-test-real"
-gallery-test-watch = "just gallery-test-watch"
-info = "just info"
-install = "just install"
-lint = "uvx nox -s lint"
-lint-pack = "just lint-pack"
-maya-debug = "just maya-debug"
-maya-dev = "just maya-dev"
-maya-setup-dev = "just maya-setup-dev"
-nox = "uvx nox"
-nox-all = "just nox-all"
-nox-qt = "just nox-qt"
-pack-all = "just pack-all"
-pack-build = "just pack-build"
-pack-clean = "just pack-clean"
-pack-config = "just pack-config"
-pack-frontend = "just pack-frontend"
-pack-info = "just pack-info"
-pack-url = "just pack-url"
-pycov = "just pycov"
-rebuild-pylib = "just rebuild-pylib"
-rebuild-pylib-verbose = "just rebuild-pylib-verbose"
-release = "just release"
+coverage-all = "just coverage-all"
+
+# CI commands
+ci-install = "just ci-install"
+ci-build = "just ci-build"
+ci-lint = "just ci-lint"
+ci-test-rust = "just ci-test-rust"
+ci-test-python = "just ci-test-python"
+ci-test-basic = "just ci-test-basic"
+
+# SDK commands
+sdk-install = "just sdk-install"
 sdk-build = "just sdk-build"
 sdk-build-all = "just sdk-build-all"
-sdk-build-assets = "just sdk-build-assets"
-sdk-ci = "just sdk-ci"
-sdk-install = "just sdk-install"
-sdk-playwright-install = "just sdk-playwright-install"
 sdk-test = "just sdk-test"
-sdk-test-all = "just sdk-test-all"
-sdk-test-cov = "just sdk-test-cov"
-sdk-test-e2e = "just sdk-test-e2e"
-sdk-typecheck = "just sdk-typecheck"
-test = "uvx nox -s tests"
-test-all-python = "just test-all-python"
-test-cov = "just test-cov"
-test-fast = "just test-fast"
-test-file = "just test-file"
-test-integration = "just test-integration"
-test-marker = "just test-marker"
-test-pack = "just test-pack"
-test-pack-verbose = "just test-pack-verbose"
-test-py310 = "just test-py310"
-test-py311 = "just test-py311"
-test-py312 = "just test-py312"
-test-py37 = "just test-py37"
-test-py38 = "just test-py38"
-test-py39 = "just test-py39"
-test-unit = "just test-unit"
-test-watch = "just test-watch"
+sdk-ci = "just sdk-ci"
+
+# Gallery commands
+gallery = "just gallery"
+gallery-build = "just gallery-build"
+gallery-dev = "just gallery-dev"
+gallery-pack = "just gallery-pack"
+gallery-test = "just gallery-test"
+
+# Documentation
+docs-install = "just docs-install"
+docs-dev = "just docs-dev"
+docs-build = "just docs-build"
+docs-preview = "just docs-preview"
+
+# Pack commands
+pack-build = "just pack-build"
+pack-all = "just pack-all"
+
+# Utility
+info = "just info"
+audit = "just audit"
+bench = "just bench"
+release = "just release"
