fix(docs): install Qt6 system dependencies for PySide6

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -60,6 +60,11 @@ jobs:
           vx python --version
           vx node --version
 
+      - name: Install Qt6 system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libegl1 libxkbcommon0 libdbus-1-3
+
       - name: Install pdoc and dependencies
         run: |
           # Install pdoc and qt dependencies for documentation generation
