--- a/crates/auroraview-cli/Cargo.toml
+++ b/crates/auroraview-cli/Cargo.toml
@@ -31,7 +31,7 @@ wry = "0.53.5"
 tao = "0.34.5"
 
 # CLI framework
-clap = { version = "4.5", features = ["derive"] }
+clap = { version = "4.5", features = ["derive", "env"] }
 
 # Progress bars and spinners
 indicatif = "0.17"
@@ -80,6 +80,11 @@ rayon = "1.10"
 
 # IPC communication (for Python backend)
 ipckit = "0.1"
+
+# Self-update functionality
+reqwest = { version = "0.12", features = ["blocking", "json"] }
+zip = { version = "2.4", default-features = false, features = ["deflate"] }
+self-replace = "1.5"
 
 [target.'cfg(windows)'.dependencies]
 # WebView2 COM bindings for warmup
