--- a/packages/auroraview-mcp/pyproject.toml
+++ b/packages/auroraview-mcp/pyproject.toml
@@ -19,7 +19,7 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 dependencies = [
-    "mcp>=1.2.0",
+    "fastmcp>=2.0.0",
     "httpx>=0.25.0",
     "websockets>=12.0",
 ]
