ci(mcp): add MCP CI workflow and PyPI publishing
- Add mcp-ci.yml workflow for MCP Server CI (lint, test, build)
- Add MCP build job to pr-checks.yml with path filtering
- Add MCP PyPI publishing to release.yml
- Add ruff to MCP dev dependencies
- Support version parameter in MCP CI for release builds
- MCP package will be published to PyPI alongside main auroraview package

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -50,6 +50,7 @@ jobs:
       rust: ${{ steps.filter.outputs.rust }}
       python: ${{ steps.filter.outputs.python }}
       sdk: ${{ steps.filter.outputs.sdk }}
+      mcp: ${{ steps.filter.outputs.mcp }}
       gallery: ${{ steps.filter.outputs.gallery }}
       docs: ${{ steps.filter.outputs.docs }}
       ci: ${{ steps.filter.outputs.ci }}
@@ -59,6 +60,7 @@ jobs:
       needs_rust_checks: ${{ steps.filter.outputs.rust == 'true' || steps.filter.outputs.ci == 'true' }}
       needs_python_tests: ${{ steps.filter.outputs.python == 'true' || steps.filter.outputs.rust == 'true' || steps.filter.outputs.ci == 'true' }}
       needs_sdk_build: ${{ steps.filter.outputs.sdk == 'true' || steps.filter.outputs.ci == 'true' }}
+      needs_mcp_build: ${{ steps.filter.outputs.mcp == 'true' || steps.filter.outputs.ci == 'true' }}
       needs_gallery_tests: ${{ steps.filter.outputs.gallery == 'true' || steps.filter.outputs.sdk == 'true' || steps.filter.outputs.ci == 'true' }}
       needs_docs_build: ${{ steps.filter.outputs.docs == 'true' || steps.filter.outputs.ci == 'true' }}
     steps:
@@ -83,7 +85,9 @@ jobs:
               - 'tests/python/**'
               - 'noxfile.py'
             sdk:
-              - 'packages/**'
+              - 'packages/auroraview-sdk/**'
+            mcp:
+              - 'packages/auroraview-mcp/**'
             gallery:
               - 'gallery/**'
             docs:
@@ -108,6 +112,7 @@ jobs:
           echo "| Rust | ${{ steps.filter.outputs.rust }} | Rust checks, CLI build |" >> $GITHUB_STEP_SUMMARY
           echo "| Python | ${{ steps.filter.outputs.python }} | Python tests |" >> $GITHUB_STEP_SUMMARY
           echo "| SDK | ${{ steps.filter.outputs.sdk }} | SDK build |" >> $GITHUB_STEP_SUMMARY
+          echo "| MCP | ${{ steps.filter.outputs.mcp }} | MCP build |" >> $GITHUB_STEP_SUMMARY
           echo "| Gallery | ${{ steps.filter.outputs.gallery }} | Gallery E2E |" >> $GITHUB_STEP_SUMMARY
           echo "| Docs | ${{ steps.filter.outputs.docs }} | Docs build |" >> $GITHUB_STEP_SUMMARY
           echo "| CI | ${{ steps.filter.outputs.ci }} | All checks |" >> $GITHUB_STEP_SUMMARY
@@ -117,6 +122,7 @@ jobs:
           echo "- needs_rust_checks: ${{ steps.filter.outputs.rust == 'true' || steps.filter.outputs.ci == 'true' }}" >> $GITHUB_STEP_SUMMARY
           echo "- needs_python_tests: ${{ steps.filter.outputs.python == 'true' || steps.filter.outputs.rust == 'true' || steps.filter.outputs.ci == 'true' }}" >> $GITHUB_STEP_SUMMARY
           echo "- needs_sdk_build: ${{ steps.filter.outputs.sdk == 'true' || steps.filter.outputs.ci == 'true' }}" >> $GITHUB_STEP_SUMMARY
+          echo "- needs_mcp_build: ${{ steps.filter.outputs.mcp == 'true' || steps.filter.outputs.ci == 'true' }}" >> $GITHUB_STEP_SUMMARY
           echo "- needs_gallery_tests: ${{ steps.filter.outputs.gallery == 'true' || steps.filter.outputs.sdk == 'true' || steps.filter.outputs.ci == 'true' }}" >> $GITHUB_STEP_SUMMARY
           echo "- needs_docs_build: ${{ steps.filter.outputs.docs == 'true' || steps.filter.outputs.ci == 'true' }}" >> $GITHUB_STEP_SUMMARY
 
@@ -225,6 +231,18 @@ jobs:
     needs: [path-filter]
     if: needs.path-filter.outputs.needs_sdk_build == 'true'
     uses: ./.github/workflows/sdk-ci.yml
+    with:
+      artifact-prefix: 'pr-'
+    secrets: inherit
+
+  # =============================================================================
+  # MCP Build - MCP Server package (parallel, no dependencies)
+  # =============================================================================
+  mcp-build:
+    name: MCP CI
+    needs: [path-filter]
+    if: needs.path-filter.outputs.needs_mcp_build == 'true'
+    uses: ./.github/workflows/mcp-ci.yml
     with:
       artifact-prefix: 'pr-'
     secrets: inherit
@@ -1147,7 +1165,7 @@ jobs:
   pr-ready:
     name: PR Ready
     runs-on: ubuntu-latest
-    needs: [path-filter, pre-build, python37-test, quick-checks, clippy, python-tests, rust-tests, wheel-build, qt-tests, cli-build, gallery-e2e, gallery-pack, sdk-build, benchmark, docs-build]
+    needs: [path-filter, pre-build, python37-test, quick-checks, clippy, python-tests, rust-tests, wheel-build, qt-tests, cli-build, gallery-e2e, gallery-pack, sdk-build, mcp-build, benchmark, docs-build]
     if: always()
     steps:
       - name: Check results
@@ -1160,6 +1178,7 @@ jobs:
           echo "- Rust: ${{ needs.path-filter.outputs.rust }}" >> $GITHUB_STEP_SUMMARY
           echo "- Python: ${{ needs.path-filter.outputs.python }}" >> $GITHUB_STEP_SUMMARY
           echo "- SDK: ${{ needs.path-filter.outputs.sdk }}" >> $GITHUB_STEP_SUMMARY
+          echo "- MCP: ${{ needs.path-filter.outputs.mcp }}" >> $GITHUB_STEP_SUMMARY
           echo "- Gallery: ${{ needs.path-filter.outputs.gallery }}" >> $GITHUB_STEP_SUMMARY
           echo "- Docs: ${{ needs.path-filter.outputs.docs }}" >> $GITHUB_STEP_SUMMARY
           echo "- CI: ${{ needs.path-filter.outputs.ci }}" >> $GITHUB_STEP_SUMMARY
@@ -1182,6 +1201,7 @@ jobs:
             ["gallery-e2e"]="${{ needs.gallery-e2e.result }}"
             ["gallery-pack"]="${{ needs.gallery-pack.result }}"
             ["sdk-build"]="${{ needs.sdk-build.result }}"
+            ["mcp-build"]="${{ needs.mcp-build.result }}"
             ["benchmark"]="${{ needs.benchmark.result }}"
             ["docs-build"]="${{ needs.docs-build.result }}"
           )
