--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -293,6 +293,19 @@ jobs:
       artifact-prefix: 'release-'
     secrets: inherit
 
+  # Build MCP Server for PyPI publishing (uses reusable workflow)
+  build-mcp:
+    name: MCP CI
+    needs: [release-please, check-tag]
+    if: |
+      always() &&
+      ((needs.release-please.result == 'success' && needs.release-please.outputs.release_created == 'true') ||
+       (needs.check-tag.result == 'success' && needs.check-tag.outputs.is_tag == 'true'))
+    uses: ./.github/workflows/mcp-ci.yml
+    with:
+      artifact-prefix: 'release-'
+    secrets: inherit
+
   # Publish SDK to npm
   npm-publish:
     name: Publish to npm
@@ -338,6 +351,70 @@ jobs:
           npm publish --access public --ignore-scripts
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  # Publish MCP Server to PyPI
+  mcp-pypi-publish:
+    name: Publish MCP to PyPI
+    runs-on: ubuntu-latest
+    needs: [release-please, check-tag, build-mcp]
+    if: |
+      always() &&
+      ((needs.release-please.result == 'success' && needs.release-please.outputs.release_created == 'true') ||
+       (needs.check-tag.result == 'success' && needs.check-tag.outputs.is_tag == 'true')) &&
+      needs.build-mcp.result == 'success'
+    environment:
+      name: pypi
+      url: https://pypi.org/p/auroraview-mcp
+    permissions:
+      id-token: write
+      contents: read
+      attestations: write
+
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+        with:
+          version: "latest"
+
+      - name: Setup Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: '3.11'
+
+      - name: Sync version and build package
+        run: |
+          TAG_NAME="${{ needs.release-please.outputs.tag_name || needs.check-tag.outputs.tag_name }}"
+          # Extract version from tag (auroraview-v0.3.8 -> 0.3.8)
+          VERSION=$(echo "$TAG_NAME" | sed 's/auroraview-v//')
+          echo "Building MCP package with version: $VERSION"
+          
+          cd packages/auroraview-mcp
+          
+          # Update version in pyproject.toml
+          sed -i 's/^version = ".*"/version = "'"$VERSION"'"/' pyproject.toml
+          echo "Updated pyproject.toml:"
+          grep version pyproject.toml
+          
+          # Build package with correct version
+          uv build
+          
+          echo "Built packages:"
+          ls -la dist/
+
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v3
+        with:
+          subject-path: 'packages/auroraview-mcp/dist/*'
+
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          packages-dir: packages/auroraview-mcp/dist
+          verbose: true
+          print-hash: true
+          skip-existing: true
 
   # Publish to PyPI - waits for either reused or built wheels
   pypi-publish:
