--- a/.github/workflows/mcp-ci.yml
+++ b/.github/workflows/mcp-ci.yml
@@ -44,7 +44,9 @@ jobs:
       - uses: actions/checkout@v6
 
       - name: Install vx
-        uses: loonghao/setup-vx@v1
+        uses: loonghao/vx@vx-v0.5.15
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Python
         uses: actions/setup-python@v6
@@ -79,7 +81,9 @@ jobs:
       - uses: actions/checkout@v6
 
       - name: Install vx
-        uses: loonghao/setup-vx@v1
+        uses: loonghao/vx@vx-v0.5.15
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Python
         uses: actions/setup-python@v6
@@ -105,7 +109,9 @@ jobs:
       - uses: actions/checkout@v6
 
       - name: Install vx
-        uses: loonghao/setup-vx@v1
+        uses: loonghao/vx@vx-v0.5.15
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Python
         uses: actions/setup-python@v6
@@ -151,7 +157,9 @@ jobs:
       - uses: actions/checkout@v6
 
       - name: Install vx
-        uses: loonghao/setup-vx@v1
+        uses: loonghao/vx@vx-v0.5.15
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Python
         uses: actions/setup-python@v6
