ci: add concurrency control to auto-cancel redundant workflow runs
- Add concurrency config to build-wheels.yml, build-gallery.yml, build-cli.yml
- Add concurrency config to codeql.yml and security-audit.yml
- Add concurrency config to release.yml (with cancel-in-progress=false for tags)
- Update contributing docs (EN/CN) to explain CI concurrency behavior

This prevents resource waste when new commits are pushed to a PR while
previous CI runs are still in progress. The new runs will automatically
cancel the old ones, providing faster feedback on the latest code.

--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -28,6 +28,11 @@ on:
         type: string
         default: ''
 
+# Cancel in-progress runs for the same workflow/ref combination
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 permissions:
   contents: read
   actions: write # Required for uploading artifacts
