--- a/.github/workflows/mcp-ci.yml
+++ b/.github/workflows/mcp-ci.yml
@@ -98,7 +98,7 @@ jobs:
       - name: Run tests
         run: |
           cd packages/auroraview-mcp
-          vx uvx pytest tests/ -v --tb=short
+          vx uv run pytest tests/ -v --tb=short
 
   # Coverage report (only on Python 3.11)
   coverage:
@@ -126,7 +126,7 @@ jobs:
       - name: Run tests with coverage
         run: |
           cd packages/auroraview-mcp
-          vx uvx pytest tests/ --cov=auroraview_mcp --cov-report=xml --cov-report=html
+          vx uv run pytest tests/ --cov=auroraview_mcp --cov-report=xml --cov-report=html
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
