chore: add auroraview-mcp to release-please config and fix unused variable warning\n\n- Add packages/auroraview-mcp/pyproject.toml to extra-files for version sync\n- Move path variable declaration inside platform-specific blocks to avoid unused warning\n- Ensures auroraview-mcp version follows main package version

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -26,6 +26,11 @@
           "type": "json",
           "path": "packages/auroraview-sdk/package.json",
           "jsonpath": "$.version"
+        },
+        {
+          "type": "toml",
+          "path": "packages/auroraview-mcp/pyproject.toml",
+          "jsonpath": "$.project.version"
         }
       ]
     }
