--- a/.github/workflows/mcp-ci.yml
+++ b/.github/workflows/mcp-ci.yml
@@ -221,6 +221,8 @@ jobs:
 
       - name: Create test environment and install (Unix)
         if: runner.os != 'Windows'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           vx uv venv --python ${{ matrix.python-version }} .test-venv
           vx uv pip install --python .test-venv/bin/python dist/*.whl
@@ -228,6 +230,8 @@ jobs:
       - name: Create test environment and install (Windows)
         if: runner.os == 'Windows'
         shell: pwsh
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           vx uv venv --python ${{ matrix.python-version }} .test-venv
           $wheel = Get-ChildItem dist/*.whl | Select-Object -First 1
@@ -238,6 +242,7 @@ jobs:
         run: |
           .test-venv/bin/python -c "from auroraview_mcp.server import mcp; print('MCP server imported successfully')"
           .test-venv/bin/python -c "from fastmcp import Client; print('FastMCP Client imported successfully')"
+          .test-venv/bin/auroraview-mcp --help || echo "CLI help not available (expected for stdio server)"
 
       - name: Verify installation (Windows)
         if: runner.os == 'Windows'
@@ -245,10 +250,7 @@ jobs:
         run: |
           .test-venv\Scripts\python.exe -c "from auroraview_mcp.server import mcp; print('MCP server imported successfully')"
           .test-venv\Scripts\python.exe -c "from fastmcp import Client; print('FastMCP Client imported successfully')"
-
-      - name: Test CLI entry point
-        run: |
-          auroraview-mcp --help || echo "CLI help not available (expected for stdio server)"
+          .test-venv\Scripts\auroraview-mcp.exe --help || echo "CLI help not available (expected for stdio server)"
 
   # Final gate
   mcp-ready:
