fix: add remote_debugging_port to Python WebView and fix CI vx action
- Add remote_debugging_port parameter to Python WebView class
- Gallery now reads AURORAVIEW_CDP_PORT env var for CDP debugging
- Fix release.yml: use loonghao/vx@main instead of non-existent loonghao/setup-vx@v1
- Update mcp-tester skill with issue handling workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -381,7 +381,9 @@ jobs:
       - uses: actions/checkout@v6
 
       - name: Install vx
-        uses: loonghao/setup-vx@v1
+        uses: loonghao/vx@main
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Python
         uses: actions/setup-python@v6
