--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -390,6 +390,9 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Install just
+        run: vx cargo install just
+
       - name: Sync version and build package
         run: |
           TAG_NAME="${{ needs.release-please.outputs.tag_name || needs.check-tag.outputs.tag_name }}"
@@ -404,11 +407,12 @@ jobs:
           echo "Updated pyproject.toml:"
           grep version pyproject.toml
           
-          # Build package with correct version
-          vx uv build
+          # Build package with correct version using just
+          cd ../..
+          vx just mcp-build
           
           echo "Built packages:"
-          ls -la dist/
+          ls -la packages/auroraview-mcp/dist/
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v3
